--- a/app/static/css/menu.css
+++ b/app/static/css/menu.css
@@ -4,15 +4,16 @@
   overflow: visible;
   background-color: #6caee0;
   position: fixed;
-  top: 0;
+  top: -50px;
   width: 100%;
-  height: 65px; // this fixes the height (which should already be this size)
+  height: 115px;
 }
 
 .navbar table {
   width: 100%;
   text-align: center;
   color: #fff;
+  margin-top: 50px;
   padding: 18px 20px 15px 20px;
   font-size: 22px;
 }
